--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,15 @@
-*.sdf
-*.opensdf
-*.sln
-*.vcproj*
-*.vcxproj*
-*.csproj*
-*.ncb
+# precompiled headers
+*.ipch
+ipch/*
+
+# VS related stuff
+*.log
 *.suo
-*.cache
-*.exe
-*.bak
+*.sdf
+*.user
+*.filters
+*.opensdf
+obj/
+Debug/
+Release/
 
-SCom/debug/*
-SCom/release/*
-SCom/Debug/*
-SCom/Release/*
-SCom/SCom/Debug/*
-SCom/SCom/Release/*
-SCom/ipch/*
-
-SComUI/SComUI/obj/*
-SComUI/SComUI/bin/*
-
-targetver.h
-
-*.hex
-*.obj
-*.LST
-*.__i
-*.plg
-*.lnp
-*.uvopt
-*.SRC
-*.ls1
-*._ia
